2009-05-26  Thomas Moulard  <thomas.moulard@gmail.com>

	Make the plugin safer and clean the error management code.
	* src/roboptim-core-cfsqp-plugin.cc:
	Fix unitialized memory use, add more assertions, copy lambdas
	into result class and clean error/warning management code.
	* tests/hs071.hh,
	* tests/optimization-problem-1.cc:
	Use new function interface.
	* tests/optimization-problem-1.stdout: Regenerate.
	* tests/plugin.cc: Display problem before solving it.
	* tests/plugin.stdout: Regenerate.
	* tests/simple.cc: Remove unwanted return statement.
	* tests/simple.stdout: Regenerate.

2009-05-20  Thomas Moulard  <thomas.moulard@gmail.com>

	Add new test.
	* tests/Makefile.am: Compile new test.
	* tests/optimization-problem-1.cc: New.
	* tests/optimization-problem-1.stdout: New.
	* tests/testsuite.at: Run new test.

2009-05-05  Thomas Moulard  <thomas.moulard@gmail.com>

	Predeclare functions to remove some warnings.
	* src/roboptim-core-cfsqp-plugin.cc: Here.

2009-05-03  Thomas Moulard  <thomas.moulard@gmail.com>

	Update NEWS.
	* NEWS: Here.

2009-05-03  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix makeBound call.
	* tests/hs071.hh: Here.

2009-05-03  Thomas Moulard  <thomas.moulard@gmail.com>

	Add a disclaimer in the documentation about CFSQP license.
	* src/doc.hh: Here.

2009-05-03  Thomas Moulard  <thomas.moulard@gmail.com>

	* .gitignore,
	* AUTHORS,
	* COPYING,
	* INSTALL,
	* Makefile.am,
	* NEWS,
	* README,
	* bootstrap,
	* build-aux/autotest.at,
	* build-aux/autotest.mk,
	* build-aux/bootstrap,
	* build-aux/init.mk,
	* build-aux/roboptim-core.m4,
	* build-aux/warning.m4,
	* configure.ac,
	* doc/Doxyfile.in,
	* doc/Makefile.am,
	* doc/doxygen.css,
	* doc/footer.html,
	* doc/header.html,
	* doc/package.css,
	* doc/sf-upload.sh.in,
	* doc/tabs.css,
	* include/Makefile.am,
	* include/roboptim/core/plugin/cfsqp.hh,
	* src/Makefile.am,
	* src/cfsqp.c,
	* src/cfsqpusr.h,
	* src/doc.hh,
	* src/qld.c,
	* src/roboptim-core-cfsqp-plugin.cc,